# emos

./: .clang-format  .gitignore  .gitmodules  CMakeGlobalSetup.cmake  CMakeLists.txt  CMakeUtils.cmake  README.md  TODO.md
src/: CMakeLists.txt  bit_operations.h  counters.h  error.h  hang_detector.h  instruction_tracer.h  instructions.h  main.cpp  processor.cpp  processor.h  registers.cpp  registers.h  types.h
test/: CMakeLists.txt  adc.cpp  adc_sbc.cpp  and.cpp  asl.cpp  bcc_bcs_beq_bmi_bne_bpl_bvc_bvs.cpp  bit.cpp  brk_rti.cpp  cmp.cpp  compare.cpp  eor.cpp  fixtures.h  inc_dec.cpp  inx_iny_dex_dey.cpp  jmp.cpp  jsr_rts.cpp  lda.cpp  lda_ldx_ldy.cpp  lsr.cpp  nop.cpp  ora.cpp  pha.cpp  php.cpp  pla.cpp  plp.cpp  rol.cpp  ror.cpp  sec_sed_sei.cpp  sec_sed_sei_clc_cld_cli_clv.cpp  simple_test.cpp  stx_sty.cpp  tax_tay_txa_tya.cpp  tax_tay_txa_tya_tsx_txs.cpp
test/fixtures/: emos_test.h  flags_tracker.h  referenced_value.h
test/functional_test/: CMakeLists.txt  main.cpp
test/unit_test/: CMakeLists.txt  adc_sbc.cpp  and.cpp  asl.cpp  bcc_bcs_beq_bmi_bne_bpl_bvc_bvs.cpp  bit.cpp  brk_rti.cpp  compare.cpp  eor.cpp  hang_detector.cpp  inc_dec.cpp  inx_iny_dex_dey.cpp  jmp.cpp  jsr_rts.cpp  lda_ldx_ldy.cpp  lsr.cpp  nop.cpp  ora.cpp  pha.cpp  php.cpp  pla.cpp  plp.cpp  rol.cpp  ror.cpp  sec_sed_sei_clc_cld_cli_clv.cpp  stx_sty.cpp  tax_tay_txa_tya_tsx_txs.cpp
test/unit_test/fixtures/: emos_test.h  flags_tracker.h  referenced_value.h  whitebox.h
